--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,12 @@
 html
   head
+    style
+      include ../styles.css
+
     title #{title}
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.js")
+
     body
       div.jumbotron
         h1 SENG 371 - Project #2
@@ -12,3 +17,91 @@ html
           div.form-group
             input.form-control(type="text", name="repoName", placeholder="Enter a repo name e.g. Bootstrap")
             button.btn.btn-default(type="submit") Search
+
+      div.main-chart
+
+      script(type="text/javascript").
+        var data = [
+            [2, 2],
+            [2, 5],
+            [6, 6],
+            [6, 7],
+            [25, 25]
+        ];
+
+        var width = 900,
+            height = 900;
+
+        var svg = d3.select(".main-chart").append("svg")
+          .attr("width", width)
+          .attr("height", height);
+
+        var x = d3.scale.linear()
+            .domain([0, d3.max(data, function (d) {
+            return d[0];
+        })])
+            .range([0, width]);
+
+        var y = d3.scale.linear()
+            .domain([0, d3.max(data, function (d) {
+            return d[1];
+        })])
+            //.range([height, 0]) //flip y
+            .range([0, height]);
+
+        var xAxis = d3.svg.axis()
+            .scale(x)
+            //.orient('bottom')
+            .orient('top'); // adjust ticks to new x axis position
+
+        main.append('g')
+            //.attr('transform', 'translate(0,' + height + ')')
+            .attr('transform', 'translate(0,0)') // move x axis up
+            .attr('class', 'main axis date')
+            .call(xAxis);
+
+        // draw the y axis
+        var yAxis = d3.svg.axis()
+            .scale(y)
+            .orient('left');
+
+        main.append('g')
+            .attr('transform', 'translate(0,0)')
+            .attr('class', 'main axis date')
+            .call(yAxis);
+
+        svg.selectAll("scatter-dots").data(data);
+
+        //- var margin = {top: 50, right: 55, bottom: 22, left: 40},
+        //-     width = 950 - margin.left - margin.right,
+        //-     height = 540 - margin.top - margin.bottom,
+        //-     bounds = d3.geom.polygon([[0, 0], [0, height], [width, height], [width, 0]]);
+
+        //- var x = d3.scale.linear()
+        //-     .domain([1900, 2013])
+        //-     .range([0, width]);
+
+        //- var y = d3.scale.linear()
+        //-     .domain([0, 9.5])
+        //-     .range([height, 0]);
+
+        //- var xAxis = d3.svg.axis()
+        //-     .scale(x)
+        //-     .orient("bottom")
+        //-     .tickSize(4)
+        //-     .tickFormat(formatYear)
+        //-     .tickPadding(2);
+
+        //- var yAxis = d3.svg.axis()
+        //-     .scale(y)
+        //-     .orient("right")
+        //-     .ticks(10)
+        //-     .tickPadding(10)
+        //-     .tickSize( -width);
+
+        //- var svg = d3.select(".g-main-chart").append("svg")
+        //-     .attr("width", (width + margin.left + margin.right))
+        //-     .attr("height", (height + margin.top + margin.bottom))
+        //-     .style("margin-top", 10 - margin.top + "px")
+        //-   .append("g")
+        //-     .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
