--- a/views/index.jade
+++ b/views/index.jade
@@ -4,19 +4,72 @@ html
       include ../styles.css
 
     title SENG371 Project #2 - Sentimental Analysis with GitHub Activities
+
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.10.1/js/bootstrap-tour-standalone.min.js")
+
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet")
+    link(href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.10.1/css/bootstrap-tour.min.css", rel="stylesheet")
+    
     script(src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.js")
 
+    script.
+      var tour = new Tour({
+        steps: [
+          {
+            title: "Introduction",
+            content: "Take a tour to learn how to use our project!",
+            orphan: true,
+            backdrop: true
+          },
+          {
+            element: "#repoName",
+            title: "Search for a GitHub Repo",
+            content: "Type in the name of the GitHub Repo that you want to look at for its user satisfaction over time. ",
+            placement: "bottom"
+          },
+          {
+            element: "#search-button",
+            title: "Start Searching",
+            content: "Click on the 'Search' button to start!",
+            placement: "right"
+          },
+          {
+            element: "#result-graph",
+            title: "Result",
+            content: "A graph will be generated as a result to show the number of pull requests and number of issues over time, correlated with user satisfaction",
+            placement: "right"
+          },
+          {
+            element: "#github-page",
+            title: "GitHub Page",
+            content: "For more information about our project, click here to go to our GitHub page!",
+            placement: "bottom"
+          }
+        ],
+        orphan: true,
+        backdrop: true
+      });
+
+      $(document).ready(function() {
+        $(".take-tour").click(function() {
+          tour.init();
+
+          // have to use restart instead of start because if users click end tour before the end of the tour, the tour will break.
+          tour.restart();
+        });
+      });
 
     nav.navbar
       div.project-name
-        h3.bold Project #2
+        h3.nav-text.bold.test Project #2
       div.navbar-right.bold
         ul.nav
-          li
+          li#github-page
             a(href='https://github.com/guand/seng371-project2') GitHub
-          li        
-            a(href='https://github.com/guand/seng371-project2#collaborators') Collaborators
+          li
+             a.take-tour Take a tour 
+              span.glyphicon.glyphicon-question-sign
 
     body
       div.jumbotron.center
@@ -29,7 +82,7 @@ html
           form.form-inline(name="repoForm", id="repoForm", action="repo", method="get")
             div.form-group
               input.bold.form-control(type="text", name="repoName", id="repoName", placeholder="Enter a repo name e.g. Bootstrap", size="30")
-              button.bold.btn.btn-primary.search-btn(type="submit") Search
+              button#search-button.bold.btn.btn-primary.search-btn(type="submit") Search
 
       div.row.center
         div.main-chart.col-md-6.col-md-offset-3
@@ -54,6 +107,7 @@ html
             height = 600 - margin.top - margin.bottom;
 
         var svg = d3.select(".main-chart").append("svg")
+          .attr("id", "result-graph")
           .attr("width", width + margin.left + margin.right)
           .attr("height", height + margin.top + margin.bottom)
           .attr("transform", "translate(" + margin.left + ", " + margin.top + ")");
@@ -133,4 +187,3 @@ html
               .attr("class", "axis")
               .call(yAxis);
         });
-
