--- a/views/index.jade
+++ b/views/index.jade
@@ -33,7 +33,7 @@ html
 
         var margin = {
           top: 20,
-          right: 20,
+          right: 30,
           bottom: 30,
           left: 30
         };
@@ -46,12 +46,6 @@ html
           .attr("height", height + margin.top + margin.bottom)
           .attr("transform", "translate(" + margin.left + ", " + margin.top + ")");
 
-        //- var x = d3.scale.linear()
-        //-   .domain([0, d3.max(data, function (d) {
-        //-     return d[0];
-        //-   })])
-        //-   .range([0, width]);
-
         // Border around the graph
         var borderPath = svg.append("rect")
          .attr("x", 0)
@@ -63,36 +57,63 @@ html
          .style("stroke-width", 1.5);
 
         var parseDate = d3.time.format("%Y-%m-%d").parse;
+        var colors = d3.scale.category10();
+        colors("reddit");
+        colors("hackerNews");
 
         //- Load data for all of our sources from the sources.
-        d3.json("data/" + getParameterByName("repoName") + "/hackernews", function(err, json) {
-          for (var i = 0; i < json.length; i++) {
-            json[i].date = parseDate(json[i].date);
-            json[i].score = +json[i].score;
+        d3.json("data/" + getParameterByName("repoName"), function(err, json) {
+
+          var allDates = [];
+          var allScores = [];
+
+          // Reddit dates are given in epoch time (seconds since 1970)
+          for (var i = 0; i < json.reddit.length; i++) {
+            json.reddit[i].date = new Date(json.reddit[i].date * 1000);
+            json.reddit[i].score = +json.reddit[i].score;
+            json.reddit[i].data_type = "reddit";
+          }
+
+          // HackerNews dates are in YYYY-MM-DD form
+          for (var i = 0; i < json.hackerNews.length; i++) {
+            json.hackerNews[i].date = parseDate(json.hackerNews[i].date);
+            json.hackerNews[i].score = +json.hackerNews[i].score;
+            json.hackerNews[i].data_type = "hackerNews";
+          }
+
+          for (var i = 0; i < json.hackerNews.length; i++) {
+            allDates.push(json.hackerNews[i].date);
+            allScores.push(json.hackerNews[i].score);
+          }
+
+          for (var i = 0; i < json.reddit.length; i++) {
+            allDates.push(json.reddit[i].date);
+            allScores.push(json.reddit[i].score);
           }
 
           var x = d3.time.scale()
-            .domain(d3.extent(json, function(d) {
-              return d.date;
-            }))
+            .domain(d3.extent(allDates))
             .range([0, width]);
 
           var y = d3.scale.linear()
-            .domain(d3.extent(json, function(d) {
-              return d.score;
-            }))
-            .range([height, 0]) // flip y
+            .domain(d3.extent(allScores))
+            .range([height, 0]);
 
           var xAxis = d3.svg.axis()
               .scale(x)
-              .orient("bottom"); // tick orientation
+              .orient("bottom");
 
           var yAxis = d3.svg.axis()
               .scale(y)
-              .orient("left"); // tick orientation
+              .orient("left");
 
-          var xMap = function(d) { return x(d.date) };
-          var yMap = function(d) { return y(d.score) };
+          var xMap = function(d) { 
+            return x(d.date);
+          };
+
+          var yMap = function(d) {
+            return y(d.score);
+          };
 
           //- var line = d3.svg.line()
           //-   .x(function (d) { return x(d.date)})
@@ -101,24 +122,70 @@ html
           //- svg.append("path")
           //-     .attr("class", "path")
           //-     .attr("d", line(json));
-
-          svg.selectAll(".dot")
-            .data(json)
+          
+          svg.selectAll(".hackernews.dot")
+            .data(json.hackerNews)
             .enter()
             .append("circle")
-            .attr("class", "dot")
-            .attr("r", 3.5)
-            .attr("cx", xMap)
-            .attr("cy", yMap)
-            .style("fill", function (d) { return d3.scale.category10()(d.score)});
+              .attr("class", "dot")
+              .attr("r", 3.5)
+              .attr("cx", xMap)
+              .attr("cy", yMap)
+              .style("fill", function (d) { 
+                return colors(d.data_type);
+              });
+
+          svg.selectAll(".reddit.dot")
+            .data(json.reddit)
+            .enter()
+            .append("circle")
+              .attr("class", "dot")
+              .attr("r", 3.5)
+              .attr("cx", xMap)
+              .attr("cy", yMap)
+              .style("fill", function (d) { 
+                return colors(d.data_type);
+              });
 
           svg.append("g")
               .attr("class", "axis")
               .attr("transform", "translate(0, " + height + ")")
-              .call(xAxis);
+              .call(xAxis)
+            .append("text")
+              .attr("class", "axis-label")
+              .attr("x", width - 6)
+              .attr("y", -6)
+              .style("text-anchor", "end")
+              .text("Date");
 
           svg.append("g")
               .attr("class", "axis")
-              .call(yAxis);
-        });
+              .call(yAxis)
+            .append("text")
+              .attr("class", "axis-label")
+              .attr("transform", "rotate(-90)")
+              .attr("x", -6)
+              .attr("dy", "1em")
+              .style("text-anchor", "end")
+              .text("Sentiment Score");
+          });
 
+          var legend = svg.selectAll(".legend")
+              .data(colors.domain())
+            .enter()
+              .append("g")
+              .attr("class", "legend")
+              .attr("transform", function(d, i) { return "translate(-5," + i * 25 + ")"; })
+
+          legend.append("rect")
+              .attr("x", width - 18)
+              .attr("width", 18)
+              .attr("height", 18)
+              .style("fill", colors);
+
+          legend.append("text")
+            .attr("x", width - 24)
+            .attr("y", 9)
+            .attr("dy", ".35em")
+            .style("text-anchor", "end")
+            .text(function(d) { return d; });
