changed how the data gets loaded and added a loading animation

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,9 +8,10 @@ html
     link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet")
     link(href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.10.1/css/bootstrap-tour.min.css", rel="stylesheet")
     link(href="stylesheet/styles.css", rel="stylesheet")
+    link(href="stylesheet/loading.css", rel="stylesheet")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.js")
     script(src="javascript/tour.js")
-
+    script(src="javascript/visual.js") 
     nav.navbar
       div.project-name
         h3.nav-text.bold Project #2
@@ -45,7 +46,21 @@ html
 
       div.row.center
         div.main-chart.col-md-6.col-md-offset-3
+        div.loading.col-md-6.col-md-offset-3
+          div.jar
+            div.mouth
+            div.neck
+            div.base
+              div.liquid 
+              div.wave
+              div.wave
+              div.bubble
+              div.bubble
+            div.bubble
+            div.bubble
+              
+          p loading.....
         
-        script(src="javascript/visual.js")    
+           
       
         
