added hover on node to show comment

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,10 +6,12 @@ html
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.10.1/js/bootstrap-tour-standalone.min.js")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.7.0/lodash.min.js")
+    script(src="javascript/jquery.tipsy.js")
     link(href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css", rel="stylesheet")
     link(href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-tour/0.10.1/css/bootstrap-tour.min.css", rel="stylesheet")
     link(href="stylesheet/styles.css", rel="stylesheet")
     link(href="stylesheet/loading.css", rel="stylesheet")
+    link(href="stylesheet/tipsy.css", rel="stylesheet")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.5/d3.js")
     script(src="javascript/tour.js")
     script(src="javascript/visual.js") 
